--- a/style.css
+++ b/style.css
@@ -130,10 +130,11 @@ body {
 
 .display-controls {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: flex-end;
     width: 100%;
     margin-top: 5px;
-    background-color: #000;
+    /* background-color: #000; */
     color: #fff;
     padding: 5px;
     border-radius: 3px;
